1999-12-29  Harlan Stenn  <stenn@whimsy.udel.edu>

	* scripts/ntpsweep: Nifty utility
	From: Hans.Lambermont@nl.origin-it.com

	* ntpd/refclock_fg.c: 
	* ntpd/refclock_conf.c: 
	* ntpd/ntp_control.c: 
	* ntpd/Makefile.am: 
	* libntp/clocktypes.c: 
	* include/ntp.h: 
	* html/refclock.htm: 
	* html/driver37.htm: 
	* configure.in: 
	* acconfig.h: 
	Forum Graphic GPS clock support
	From: Dmitry Smirnov <das@online.nsk.su>
	
	* configure.in: Default to compile the IRIG, CHU and WWV/H
	drivers and compile the CHU driver for audio, not modem.
	Requested by Dave Mills.

	* html/audio.htm: 
	* html/driver36.htm: 
	* html/qth.htm: 
	Dave wrote these to go along with the changes I checked in yesterday.
	
1999-12-28  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_wwv.c: 
	* ntpd/refclock_conf.c: 
	* ntpd/refclock_chu.c: 
	* ntpd/ntp_refclock.c: 
	* ntpd/ntp_loopfilter.c: 
	* html/refclock.htm: 
	* html/pps.htm: 
	* html/index.htm: 
	* html/driver7.htm: 
	* html/driver6.htm: 
	* html/copyright.htm: 

	I indulged an old agenda to polish up some programs originally
	written for a DSP evaluation board. The result is a really hot
	audio driver for the NIST WWV/WWVH time/frequency station plus a
	makeover for the CHU audio driver. Currently, they and their IRIG
	audio driver buddy use the SunOS/Solaris audio interface, which is
	clean and simple. I hook the line in jack to a shortwave radio and
	these drivers (driver 7 for CHU and driver 36 for WWV) and the
	drivers do the rest. The WWV/H driver is really hot - I am
	currently watching the ionosphere move from the doppler that shows
	up on the tick modulation tracked by the program. During midday
	when the F2 layer settles down, the program closes in on a few
	tens of microseconds of spare jitter and wander.  This watch on
	whichever 15/20 MHz signal sounds the best. At night on 5/10 MHz
	and even 2.5 HMz where the multipath, interference and noise are
	much worse, the driver bangs around somewhat more.
